[package]
name = "castradio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llq = { git = "https://codeberg.org/zesty/LLQ" }

tokio = { version = "1.29.0", features = [ "full" ] }
async-trait = "0.1.71"

hashbrown = { version = "0.14.0", features = [ "serde" ] }

httparse = "1.8.0"
httpdate = "1.0.2"
urlencoding = "2.1.2"
base64 = "0.21.2"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

chrono = "0.4.28"

serde_json = "1.0.105"
serde_yaml = "0.9.22"
serde = { version = "1.0.164", features = [ "derive" ] }

anyhow = "1.0.70"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }

symphonia = { version = "0.5.3", features = [ "mp3" ] }
