[package]
name = "castmedia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llq = { git = "https://codeberg.org/zesty/LLQ" }

tokio = { version = "1.29.0", features = [ "full" ] }
tokio-native-tls = "0.3.1" 

inotify = "0.10"

futures = "0.3.28"

hashbrown = { version = "0.14.0", features = [ "serde" ] }

url = { version = "2.4.1", features = [ "serde" ] }
httparse = "1.8.0"
httpdate = "1.0.2"
urlencoding = "2.1.2"
base64 = "0.21.2"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

chrono = "0.4.28"

postcard = { version = "1.0.8", features = [ "use-std" ] }
serde_json = "1.0.105"
serde_yaml = "0.9.22"
serde = { version = "1.0.164", features = [ "derive" ] }

anyhow = "1.0.70"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }

symphonia = { version = "0.5.3", features = [ "mp3" ] }

arg = "0.4.1"

obake = { version = "1.0", features = [ "serde" ] }
passfd = "0.1.6"

socket2 = "0.5.4"

zxcvbn = "2.2.2"

scrypt = "0.11.0"

async-trait = "0.1.74"
