[package]
name = "castmedia"
version = "0.1.0"
edition = "2021"

[dependencies]
qanat = { git = "https://codeberg.org/zesty/qanat" }

tokio = { version = "1.29.0", features = [ "net", "fs", "io-util", "time", "sync", "rt-multi-thread", "macros" ] }
tokio-native-tls = "0.3.1"

inotify = "0.10"

futures = { version = "0.3.28", default-features = false, features = [ "executor" ] }

hashbrown = { version = "0.14.0", features = [ "serde" ] }

url = { version = "2.4.1", features = [ "serde" ] }
httparse = "1.8.0"
urlencoding = "2.1.2"
base64 = "0.21.2"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

chrono = "0.4.28"

serde_json = "1.0.105"
serde_yaml = "0.9.22"
serde = { version = "1.0.164", features = [ "derive" ] }
serde_with = { version = "3.6.0", features = [ "hashbrown_0_14" ] }

anyhow = "1.0.70"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }

symphonia = { version = "0.5.3", default-features = false, features = [ "mp3" ] }

arg = "0.4.1"

obake = { version = "1.0", features = [ "serde" ] }
passfd = "0.1.6"

socket2 = "0.5.4"

zxcvbn = "2.2.2"

scrypt = "0.11.0"

diatomic-waker = "0.1.0"

[dev-dependencies]
tokio = { version = "1.29.0", features = [ "full" ] }
test-utils = { path = "test-utils" }
